@@ -1,3 +1,10 @@
+2003-05-11  Yoichi NAKAYAMA  <yoichi@geiin.org>
+
+	* mime-w3.el (mime-preview-text/html): Protect 1st arg of `message'.
+	* mime-play.el (mime-mailcap-method-sentinel): Ditto.
+	(mime-view-message/external-anon-ftp): Ditto.
+	(mime-view-message/external-url): Ditto.
+
 2003-04-05  Yoichi NAKAYAMA  <yoichi@geiin.org>
 
 	* mime-view.el (mime-preview-toggle-display): Use boundary with
